--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-langchain
-langchain-community
-langchain-text-splitters
-chromadb
-langchain-chroma
-requests
-langchain-openai
-langchain-ollama
-langchain-litellm
-streamlit
-python-dotenv
-argparse
-unstructured
-pypdf
-markdown
-pyyaml
+langchain==0.3.27
+langchain-chroma==0.2.5
+langchain-community==0.3.27
+langchain-litellm==0.2.2
+langchain-ollama==0.3.6
+langchain-openai==0.3.30
+langchain-text-splitters==0.3.9
+chromadb>=1.0.9
+requests==2.32.4
+streamlit==1.48.1
+python-dotenv==1.1.1
+unstructured==0.18.13
+pypdf==6.0.0
+markdown==3.8.2
+pyyaml==6.0.2
